--- a/Inicio.css
+++ b/Inicio.css
@@ -10,18 +10,24 @@
 .u-section-1 .u-text-1 {
   font-size: 6rem;
   font-weight: 700;
-  margin: 60px auto 0;
+  margin: 266px auto 0;
 }
 
 .u-section-1 .u-text-2 {
+  font-size: 1.875rem;
   margin: 30px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
-  background-image: none;
-  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-style: none;
   font-weight: 700;
-  margin: 40px auto 60px;
+  text-transform: uppercase;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  font-size: 1.875rem;
+  margin: 46px auto 60px;
+  padding: 49px 63px 50px 62px;
 }
 
 @media (max-width: 1199px) {
@@ -63,7 +69,8 @@
 }
 
 .u-section-2 .u-text-1 {
-  width: 380px;
+  font-size: 3rem;
+  width: 519px;
   margin: 92px auto 0;
 }
 
@@ -80,22 +87,34 @@
 }
 
 .u-section-2 .u-gallery-inner-1 {
-  grid-template-columns: repeat(3, auto);
-  grid-gap: 17px;
+  grid-template-columns: auto auto auto;
+  grid-gap: 15px 15px;
+}
+
+.u-section-2 .u-back-slide-1 {
+  transition-duration: 0.5s;
 }
 
 .u-section-2 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05));
   padding: 20px;
+}
+
+.u-section-2 .u-back-slide-2 {
+  transition-duration: 0.5s;
 }
 
 .u-section-2 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05));
   padding: 20px;
 }
 
+.u-section-2 .u-back-slide-3 {
+  transition-duration: 0.5s;
+}
+
 .u-section-2 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05));
   padding: 20px;
 }
 
@@ -106,6 +125,10 @@
 
   .u-section-2 .u-gallery-1 {
     height: 349px;
+  }
+
+  .u-section-2 .u-gallery-inner-1 {
+    grid-template-columns: repeat(3, auto);
   }
 }
 
@@ -152,6 +175,7 @@
 
   .u-section-2 .u-text-1 {
     width: 340px;
+    font-size: 1.5rem;
   }
 
   .u-section-2 .u-text-2 {
