--- a/Inicio.css
+++ b/Inicio.css
@@ -50,33 +50,45 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 399px;
+    min-height: 638px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 3.75rem;
     width: auto;
     margin-top: 58px;
+    margin-right: 20px;
     margin-left: 0;
-    margin-right: 0;
+    font-size: 3rem;
   }
 
   .u-section-1 .u-text-2 {
     margin-top: 32px;
+    font-size: 1.25rem;
   }
-}.u-section-2 .u-sheet-1 {
-  min-height: 749px;
+
+  .u-section-1 .u-btn-1 {
+    font-size: 1.125rem;
+    margin-top: 145px;
+    padding: 12px 9px 13px 8px;
+  }
+}.u-section-2 {
+  background-image: linear-gradient(#db545a, #293332);
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 759px;
 }
 
 .u-section-2 .u-text-1 {
-  font-size: 3rem;
-  width: 519px;
-  margin: 92px auto 0;
+  width: 645px;
+  font-weight: 700;
+  animation-duration: 1000ms;
+  margin: 83px auto 0;
 }
 
 .u-section-2 .u-text-2 {
   width: 746px;
-  margin: 25px auto 0;
+  margin: 34px auto 0;
 }
 
 .u-section-2 .u-gallery-1 {
@@ -96,7 +108,7 @@
 }
 
 .u-section-2 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05));
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 20px;
 }
 
@@ -105,7 +117,7 @@
 }
 
 .u-section-2 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05));
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 20px;
 }
 
@@ -114,13 +126,13 @@
 }
 
 .u-section-2 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05));
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   padding: 20px;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 675px;
+    min-height: 685px;
   }
 
   .u-section-2 .u-gallery-1 {
@@ -134,7 +146,7 @@
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 1128px;
+    min-height: 1138px;
   }
 
   .u-section-2 .u-text-2 {
@@ -153,6 +165,10 @@
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
     min-height: 2093px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: 540px;
   }
 
   .u-section-2 .u-text-2 {
@@ -175,7 +191,6 @@
 
   .u-section-2 .u-text-1 {
     width: 340px;
-    font-size: 1.5rem;
   }
 
   .u-section-2 .u-text-2 {
